# moe-core

./: .gitignore  PreparingTheBuild.md  RunningTheSamples.md  branch.sh  branch_inner.sh  build.gradle  fast_forward.sh  ios-sdk-build.sh  project.config
Builder/: build-moe-pack.sh  build-tools.sh
CMakeGen/: .classpath  .project
Compact/: apply.py
SourcePacker/: README.txt
cfg-trim/: README.txt
cfg-trim/cfg-trim/: main.mm
cfg-trim/cfg-trim.xcodeproj/: project.pbxproj
cfg-trim/cfg-trim.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
moe.apple/moe.core.java/: build.gradle
moe.apple/tools/: desugar_jdk_libs.json  proguard-full.cfg  proguard.cfg
moe.iOS/: build.gradle  collect_licenses.sh  settings.gradle
moe.iOS/moe.ios.core/: build.gradle  typeconfig.ngtconf
moe.iOS/moe.ios.core.native/android.art.compiler/: CMakeLists.txt
moe.iOS/moe.ios.core.native/android.art.dalvikvm/: CMakeLists.txt
moe.iOS/moe.ios.core.native/android.art.dalvikvm/android.art.dalvikvm.xcodeproj/: project.pbxproj
moe.iOS/moe.ios.core.native/android.art.dex2oat/: CMakeLists.txt  build.gradle
moe.iOS/moe.ios.core.native/android.art.disassembler/: CMakeLists.txt
moe.iOS/moe.ios.core.native/android.art.disassembler/android.art.disassembler.xcodeproj/: project.pbxproj
moe.iOS/moe.ios.core.native/android.art.disassembler/android.art.disassembler.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
moe.iOS/moe.ios.core.native/android.art.runtime/: CMakeLists.txt  forwarder.sh
moe.iOS/moe.ios.core.native/android.art.sigchainlib/: CMakeLists.txt  build.gradle
moe.iOS/moe.ios.core.native/android.external.conscrypt/: CMakeLists.txt
moe.iOS/moe.ios.core.native/android.external.conscrypt/android.external.conscrypt.xcodeproj/: project.pbxproj
moe.iOS/moe.ios.core.native/android.external.conscrypt/src/main/native/: Conscrypt-Prefix.pch
moe.iOS/moe.ios.core.native/android.external.expat/: CMakeLists.txt
moe.iOS/moe.ios.core.native/android.external.expat/android.external.expat.xcodeproj/: project.pbxproj
moe.iOS/moe.ios.core.native/android.external.fdlibm/: CMakeLists.txt
moe.iOS/moe.ios.core.native/android.external.icu/: CMakeLists.txt
moe.iOS/moe.ios.core.native/android.external.javasqlite/: CMakeLists.txt
moe.iOS/moe.ios.core.native/android.external.javasqlite/android.external.javasqlite.xcodeproj/: project.pbxproj
moe.iOS/moe.ios.core.native/android.external.libunwind/: CMakeLists.txt
moe.iOS/moe.ios.core.native/android.external.openssl/: CMakeLists.txt
moe.iOS/moe.ios.core.native/android.external.sqlite/: CMakeLists.txt
moe.iOS/moe.ios.core.native/android.external.vixl/: CMakeLists.txt  build.gradle
moe.iOS/moe.ios.core.native/android.external.vixl/android.external.vixl.xcodeproj/: project.pbxproj
moe.iOS/moe.ios.core.native/android.external.zlib/: CMakeLists.txt
moe.iOS/moe.ios.core.native/android.libcore/: CMakeLists.txt
moe.iOS/moe.ios.core.native/android.libnativehelper/: CMakeLists.txt  build.gradle
moe.iOS/moe.ios.core.native/android.libnativehelper/android.libnativehelper.xcodeproj/: project.pbxproj
moe.iOS/moe.ios.core.native/android.system.core.base/: CMakeLists.txt
moe.iOS/moe.ios.core.native/android.system.core.base/android.system.core.base.xcodeproj/: project.pbxproj
moe.iOS/moe.ios.core.native/android.system.core.base/android.system.core.base.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
moe.iOS/moe.ios.core.native/android.system.core.libbacktrace/: CMakeLists.txt
moe.iOS/moe.ios.core.native/android.system.core.libbacktrace/android.system.core.libbacktrace.xcodeproj/: project.pbxproj
moe.iOS/moe.ios.core.native/android.system.core.libcutils/: CMakeLists.txt
moe.iOS/moe.ios.core.native/android.system.core.liblog/: CMakeLists.txt
moe.iOS/moe.ios.core.native/android.system.core.liblog/android.system.core.liblog.xcodeproj/: project.pbxproj
moe.iOS/moe.ios.core.native/android.system.core.liblog/src/main/native/: LibLog-Prefix.pch
moe.iOS/moe.ios.core.native/android.system.core.libnativebridge/: CMakeLists.txt
moe.iOS/moe.ios.core.native/android.system.core.libutils/: CMakeLists.txt
moe.iOS/moe.ios.core.native/android.system.core.libutils/android.system.core.libutils.xcodeproj/: project.pbxproj
moe.iOS/moe.ios.core.native/android.system.core.libutils/src/main/native/: LibUtils-Prefix.pch
moe.iOS/moe.ios.core.native/android.system.core.libziparchive/: CMakeLists.txt
moe.iOS/moe.ios.core.native/android.system.core.libziparchive/android.system.core.libziparchive.xcodeproj/: project.pbxproj
moe.iOS/moe.ios.core.native/android.system.core.libziparchive/src/main/native/: LibZipArchive-Prefix.pch
moe.iOS/moe.ios.core.native/mingw.wincrt/: CMakeLists.txt
moe.iOS/moe.ios.core.native/mingw.wincrt/include/: _mingw.h  dirent.h  libgen.h  unistd.h
moe.iOS/moe.ios.core.native/mingw.wincrt/include/sys/: time.h
moe.iOS/moe.ios.core.native/mingw.wincrt/src/misc/: delayimp.c  mingw_usleep.c
moe.iOS/moe.ios.core.native/mingw.wincrt/src/stdio/: fseeko32.c  fseeko64.c  ftello.c  ftello64.c  lseek64.c  mingw_pformat.c
moe.iOS/moe.ios.core.native/mingw.winpthreads/: CMakeLists.txt
moe.iOS/moe.ios.core.native/mingw.winpthreads/include/: pthread.h
moe.iOS/moe.ios.core.native/mingw.winpthreads/src/: mutex.c  ref.c  spinlock.c  thread.c  thread.h
moe.iOS/moe.ios.core.native/moe.sdk/: CMakeLists.txt  build.gradle
moe.iOS/moe.ios.core.native/moe.sdk/moe.sdk.xcodeproj/: project.pbxproj
moe.iOS/moe.ios.core.native/moe.sdk/src/: MOE.mm
moe.iOS/moe.ios.core.native/moe.sdk/src/inline/: AVFoundation.m  AudioToolbox.m  AudioUnit.m  CFNetwork.m  CoreAudio.m  CoreFoundation.m  CoreGraphics.m  CoreMIDI.m  Foundation.m  GLKit.m  Globals.m  MapKit.m  Metal.m  SceneKit.m  UIKit.m
moe.iOS/moe.ios.core.native/moe.sdk/src_windows/: MOE.cpp  MOE.h
moe.iOS/moe.ios.sdk/: build.gradle  convert_to_public
moe.iOS/moe.sdk/: build.gradle
moe.iOS/tools/: cpplint_android_sources.sh
wclang/wclang/: main.cpp
wclang/wclang.xcodeproj/: project.pbxproj
wclang/wcommon/: wcommon.h
wclang/wlink/: main.cpp
(+3350 files in other folders)
